# summitflow

./: .coderabbit.yaml  .dockerignore  .env.example  .fallowrc.json  .gitignore  .index.yaml  .npmrc  .plan.md  .pre-commit-config.yaml  .task-findings.md  AGENTIC_WORKFLOW.md  AGENTS.md  AGENTS.md.bak  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  NOTICE  QUICK_REFERENCE.md  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  SITE.md  SYSTEM_REFERENCE.md  backup-index.json  backup_deprecated.sql  enhanced_prompt.md  logo_animation_prompt.md  next-prompt.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.identity.json  renovate.json  test-marker.txt
backend/: =3.2.0  =6.0.0  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  pyrightconfig.json  pytest.ini
backend/--width/: evidence.json
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0143f4557e0e_maintenance_retention_and_schema_.py  026023735979_add_note_versions_and_format_proposals_.py  028147425749_add_agent_hub_session_ids_to_tasks.py  1c2176c7fa7a_add_backup_verification_columns.py  1f7ad32e4c91_add_vitest_to_quality_check_types.py  233ad1b1d50d_retention_count_to_retention_days.py  34ef0772bc3f_archive_task_deletions.py  3bd998f79eb7_normalize_notes_scope_names.py  3cfe9895dc2a_drop_verify_command_from_task_subtask_.py  52bde0e4709d_add_conflict_info_and_merge_sha.py  52f2ce12774b_drop_spirit_fields_objective_decisions_.py  537e356aff9f_drop_celery_result_tables.py  56459b1bf358_reconcile_orphaned_sql_migrations_101_.py  5e4422dac9ad_add_explorer_symbols_table.py  63fecd7db0f2_drop_enforce_steps_complete_trigger_.py  6ce254b8aa82_simplify_task_status_state_machine.py  70872a5bb120_add_project_category_and_sidebar_rank.py  800fff09a547_drop_task_subtasks_details_column.py  803e17ac7d9c_backup_sources_overhaul.py  8c443d64b9a7_drop_dead_tables.py  8e5fe91e3f55_add_notes_table.py  9c82f47a6d31_add_runtime_metric_samples.py  a0fe725f823f_drop_push_subscriptions_table.py  a14ee32465a1_add_idea_id_to_notifications.py  a24e1b127505_add_design_assets_tables.py  a3b7c1d2e4f5_remove_pr_created_and_pull_request_url.py  a3b7c9e2f410_drop_expected_output_columns.py  a8f3b2c1d4e5_unified_backup_system.py  a9c4e1b7d2e8_drop_tasks_autonomous_and_tighten_plan_status.py  (+26 more)
backend/app/: __init__.py  access_control.py  celery_app.py  config.py  constants.py  exception_handlers.py  hatchet_app.py  logging_config.py  logging_constants.py  main.py  project_identity.py  worker.py  worktree_node_workspace.py  worktree_service_config.py
backend/cli/: README.md  __init__.py  _client_base.py  _client_dependencies.py  _client_execution.py  _client_mixins.py  _client_mixins_execution.py  _client_mixins_subtasks.py  _client_mixins_tasks.py  _client_steps.py  _client_subtasks.py  _client_tasks.py  _client_tests.py  _formatters_compact.py  _formatters_context.py  _formatters_context_task.py  _observability.py  _output_context_views.py  _output_core.py  _output_entities.py  _output_formatters.py  _output_state.py  _portfolio_client.py  client.py  config.py  context.py  details.py  main.py  output.py  output_context.py  runtime.py  tool_registry.py
backend/logs/: summitflow.log.2026-02-16  summitflow.log.2026-02-17
backend/migrations/: 001_create_explorer_tables.sql  002_migrate_to_explorer_entries.sql  003_create_tasks_table.sql  006_add_vision_goals_project_id.sql  009_memory_session_diary.sql  012_memory_attribution.sql  013_roundtable_generated_spec.sql  015_add_observation_priority.sql  019_add_pattern_feedback.sql  021_add_cascade_delete.sql  022_observation_content_hash.sql  024_agent_sessions_build_state.sql  026_tech_debt_cleanup.sql  027_capability_verification_url.sql  029_pgvector_setup.sql  030_user_prompts.sql  031_granular_embeddings.sql  032_structured_summaries.sql  033_unified_criteria.sql  034_evidence_criteria_fk.sql  035_remove_deprecated_columns.sql  037_task_enrichment_columns.sql  039_task_subtask_steps.sql  040_nullable_pattern_project.sql  044_pattern_session_tracking.sql  046_refactor_sessions.sql  047_drop_deprecated_columns.sql  049_evidence_types_registry.sql  050_project_evidence_config.sql  052_evidence_capture_jobs_regressions.sql  053_explorer_entries_evidence_fields.sql  054_acceptance_criteria_verify_command.sql  057_ideas.sql  059_task_type_expansion.sql  061_subtask_details.sql  064_task_acceptance_criteria.sql  065_subtask_dependencies.sql  066_criterion_subtask_map.sql  068_qa_signoff_workflow.sql  069_data_migration_spirit.sql  (+23 more)
backend/migrations-archive/: 004_add_agent_configs.sql  005_tasks_issue_tracking.sql  007_memory_observation_queue.sql  008_memory_observations.sql  010_memory_learned_patterns.sql  011_memory_agent_checkpoints.sql  014_cleanup_test_diary_data.sql  016_add_raw_excerpt.sql  017_add_confidence.sql  018_add_entities.sql  020_add_memory_config.sql  025_evidence_feature_to_capability.sql  028_scan_states.sql  036_task_subtasks.sql  038_drop_dead_columns.sql  041_scan_history.sql  042_qa_issues.sql  043_context_access_log.sql  045_drop_subtask_steps_jsonb.sql  048_evidence_explorer_link.sql  051_explorer_sub_elements.sql  055_backups.sql  056_evidence_refactor.sql  058_project_automation_settings.sql  060_autonomous_schedule_settings.sql  062_step_specs.sql  063_task_spirit.sql  067_task_labels.sql  070_data_migration_criteria.sql  071_data_migration_labels.sql  080_quality_check_escalation.sql  082_drop_context_access_log.sql  083_drop_prompts_table.sql  084_create_mockups_table.sql  089_add_step_verification.sql  092_fix_plan_defect_trigger.sql  093_fix_step_not_subtask.sql  095_add_queue_status.sql  097_create_events_table.sql  098_subtask_citations.sql  (+6 more)
backend/scripts/: backfill_context_access_outcomes.py  migrate_patterns_to_jsonl.py  migrate_steps_to_table.py  migrate_task_helper.py  migrate_tdd_architecture.py
backend/tests/: conftest.py  test_agent_configs_quality.py  test_config.py  test_events_api_filters.py  test_hatchet_app.py  test_memory_seed.py  test_worker.py  worktree_merge_test.txt
(+4264 files in other folders)
