[project]
name = "summitflow"
version = "0.1.0"
description = "AI-assisted software development platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "psycopg_pool>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "google-adk>=1.21.0",
    "claude-agent-sdk>=0.1.17",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "radon>=6.0.0",
    "jsonschema>=4.21.0",
    "anthropic>=0.40.0",
    "agent-hub-client @ file:///home/kasadis/agent-hub/packages/agent-hub-client",
]

[project.scripts]
st = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"**/scripts/**" = ["E402", "SIM105", "SIM117"]
"**/tests/**" = ["SIM105"]
"**/migrations/**" = ["SIM117"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = [
    "celery", "celery.*",
    "jsonschema", "jsonschema.*",
    "agent_hub", "agent_hub.*",
    "radon", "radon.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.tasks", "app.tasks.*"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["app.api.tasks", "app.api.tasks.*"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["cli", "cli.*"]
disable_error_code = ["no-any-return", "return-value", "assignment", "type-arg", "var-annotated", "arg-type", "type-var"]

[[tool.mypy.overrides]]
module = ["app.celery_app"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["app.api.explorer"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["app.services", "app.services.*"]
disable_error_code = ["import-untyped"]
