[project]
name = "summitflow"
version = "0.1.2"
description = "AI-assisted software development platform"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.0",
    "psycopg_pool>=3.2.0",
    "pyjwt[crypto]>=2.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "hatchet-sdk>=1.22.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "typer>=0.15.0",
    "radon>=6.0.0",
    "jsonschema>=4.21.0",
    "agent-hub-client==0.4.0",
    "croniter>=3.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "tenacity>=8.2.0",
    "pytz>=2024.1",
    "psutil>=6.0.0",
    "structlog>=24.0.0",
    "python-json-logger>=2.0.0",
    "python-multipart>=0.0.26",
    "defusedxml>=0.7.1",
]

[project.scripts]
st = "cli.main:app"

[project.optional-dependencies]
dev = [
    # Testing - Core
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    # Testing - Essential Plugins
    "pytest-mock>=3.15.0",
    "pytest-timeout>=2.4.0",
    "pytest-randomly>=3.16.0",
    # Linting & Type Checking
    "ruff>=0.15.0",
    "types-jsonschema>=4.26.0",
]

[tool.uv]
constraint-dependencies = [
    "requests>=2.33.0",
    "cryptography>=46.0.6",
    "aiohttp>=3.13.4",
    "urllib3>=2.7.0",
    "mako>=1.3.12",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "python-multipart>=0.0.27",
    "pytest>=9.0.3",
]

[tool.uv.sources]
agent-hub-client = { path = "../docker/workspace-packages/agent_hub_client-0.4.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"**/scripts/**" = ["E402", "SIM105", "SIM117"]
"**/tests/**" = ["SIM105"]
"**/migrations/**" = ["SIM117"]
